Fix contrast

--- a/static/styles/vars.css
+++ b/static/styles/vars.css
@@ -64,6 +64,7 @@
 
 	/* OTHER COLORS */
 	--color-gray: #d9d9d9;
+	--color-darkgray: #757575;
 	--color-red: #ffe1e1;
 	--color-green: #eeffe1;
 	--color-black: #1a1a1a;
